# Mjolnir

./: .drone.yml  .gitignore  .travis.yml  Cargo.toml  DESIGN.md  README.md  appveyor.yaml  appveyor.yml  build.sh
api/: Cargo.toml  build.rs
api/protos/: plugin.proto  service.proto
deb_scripts/: postinst
examples/: alertmanager.rs  backup.rs  clean_disk.rs
examples/configs/: default.toml  empty.toml  mjolnir.toml  pipelines.yaml
mjolnir-api/: Cargo.toml  build.rs
mjolnir-api/protos/: agent.proto  mjolnir.proto  plugin.proto
mjolnir-api/src/: agent.rs  alert.rs  discover.rs  lib.rs  plugin.rs  plugin_entry.rs  register.rs  remediation.rs  remediation_result.rs
mjolnir-api/src/proto/: agent.rs  mjolnir.rs  mod.rs  plugin.rs
mjolnird/: Cargo.toml
mjolnird/src/: config.rs  lib.rs  main.rs  server.rs
mjolnird/src/server/: agent.rs  master.rs  mod.rs
scripts/: deps.sh  helpers.sh
snap/: snapcraft.yaml
src/: config.rs  lib.rs  main.rs  pipeline.rs
src/plugins/: mod.rs
src/server/: agent.rs  master.rs  mod.rs
systemd/: mjolnir-agent.service  mjolnir-master.service  mjolnird-agent.service  mjolnird-master.service
tests/: run.sh  test_clean_disk  test_webhook
