[package]
name = "mjolnir"
version = "0.1.0"
authors = [
    "Chris MacNaughton <chris@centaurisolutions.nl>",
    "Chris Holcombe <xfactor973@gmail.com>",
]
license = "MIT/Apache-2.0"
description = "Mjölnir is a tool to manage large numbers of servers."
homepage = "https://github.com/ChrisMacNaughton/Mjolnir"
repository = "https://github.com/ChrisMacNaughton/Mjolnir.git"

[dependencies]
mjolnir-api = { path = "mjolnir-api"}
serde = "1.0"
serde_derive = "1.0" 
toml = "0.4"

[workspace]
members = [ "mjolnir-api", "mjolnird" ]

[dev-dependencies]
serde_json = "1.0"