[package]
name = "mjolnir"
version = "0.2.0"
authors = [
    "Chris MacNaughton <chris@centaurisolutions.nl>",
    "Chris Holcombe <xfactor973@gmail.com>",
]
license = "MIT/Apache-2.0"
description = "Mjölnir is a tool to manage large numbers of servers."
homepage = "https://github.com/ChrisMacNaughton/Mjolnir"
repository = "https://github.com/ChrisMacNaughton/Mjolnir.git"
readme = "README.md"
edition = '2018'

[package.metadata.deb]
maintainer = "Chris MacNaughton <chris@centaurisolutions.nl>"
copyright = "2017 Centauri Solutions"
depends = "$auto"
section = "utility"
assets = [
	["target/release/mjolnird", "usr/sbin/", "0755"],
    ["target/release/examples/clean_disk", "usr/local/share/mjolnir/plugins/", "0775"],
    ["target/release/examples/alertmanager", "usr/local/share/mjolnir/plugins/", "0775"],
    ["README.md", "usr/share/doc/mjolnir/README", "0644"],
    ["examples/configs/default.toml", "usr/local/share/mjolnir/config.toml", "0644"],
    ["systemd/mjolnird-master.service", "etc/systemd/system/", "644"],
    ["systemd/mjolnird-agent.service", "etc/systemd/system/", "644"],
]
conf-files = [
    "usr/local/share/mjolnir/config.toml",
    "usr/local/share/mjolnir/ecpubkey.pem",
    "usr/local/share/mjolnir/ecpubkey.key",
]
maintainer-scripts = "deb_scripts"

[dependencies]
mjolnir-api = { path = "mjolnir-api"}
serde = "1.0"
serde_derive = "1.0" 
toml = "0.4"
uuid = { version = "0.5", features = ["serde", "v4"] }

[workspace]
members = [ "mjolnir-api", "mjolnird" ]

[dev-dependencies]
serde_json = "1.0"
