[package]
name = "mjolnir"
version = "0.2.0"
authors = [
    "Chris MacNaughton <chris@centaurisolutions.nl>",
    "Chris Holcombe <xfactor973@gmail.com>",
]
license = "MIT/Apache-2.0"
description = "Mjölnir is a tool to manage large numbers of servers."
homepage = "https://github.com/ChrisMacNaughton/Mjolnir"
repository = "https://github.com/ChrisMacNaughton/Mjolnir.git"
readme = "README.md"
edition = '2018'

[package.metadata.deb]
maintainer = "Chris MacNaughton <chris@centaurisolutions.nl>"
copyright = "2017 Centauri Solutions"
depends = "$auto"
section = "utility"
assets = [
	["target/release/mjolnird", "usr/sbin/", "0755"],
    ["target/release/examples/clean_disk", "usr/local/share/mjolnir/plugins/", "0775"],
    ["target/release/examples/alertmanager", "usr/local/share/mjolnir/plugins/", "0775"],
    ["README.md", "usr/share/doc/mjolnir/README", "0644"],
    ["examples/configs/default.toml", "usr/local/share/mjolnir/config.toml", "0644"],
    ["systemd/mjolnir-master.service", "etc/systemd/system/", "644"],
    ["systemd/mjolnir-agent.service", "etc/systemd/system/", "644"],
]
conf-files = [
    "usr/local/share/mjolnir/config.toml",
    "usr/local/share/mjolnir/ecpubkey.pem",
    "usr/local/share/mjolnir/ecpubkey.key",
]
maintainer-scripts = "deb_scripts"

[[bin]]
name = "mjolnird"
path = "src/mjolnird.rs"

[dependencies]
base64 = "0.10.1"
clap = "2.33.0"
futures = "0.1.29"
hostname = "0.1.5"
hyper = "~0.11"
log = "0.4.8"
mjolnir-api = { path = "mjolnir-api"}
protobuf = "2.8.1"
reqwest = "0.9.22"
serde = "1.0.101"
serde_derive = "1.0.101"
simple_logger = "1.3.0"
tokio-core = "0.1.17"
toml = "0.5.3"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
xdg = "2.2.0"
yaml-rust = "0.4.3"

[dependencies.zmq]
version= "0.9.2"
features = ["vendored"]

[workspace]
members = [ "mjolnir-api"]

[dev-dependencies]
serde_json = "1.0.41"
