[package]
name = "mjolnir-api"
version = "0.2.0"
authors = [
    "Chris MacNaughton <chris@centaurisolutions.nl>",
    "Chris Holcombe <xfactor973@gmail.com>",
]
license = "AGPL-3.0"
build = "build.rs"

[build-dependencies]
protoc-rust = "1.4"
protoc = "1.4"

[dependencies]
protobuf = { version = "1.4", features = ["with-bytes"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
uuid = { version = "0.5", features = ["serde", "v4"] }