[package]
name = "mjolnir-api"
version = "0.2.0"
authors = [
    "Chris MacNaughton <chris@centaurisolutions.nl>",
    "Chris Holcombe <xfactor973@gmail.com>",
]
license = "AGPL-3.0"
build = "build.rs"
edition = '2018'

[build-dependencies]
protoc-rust = "2.8.1"
protoc = "2.8.1"

[dependencies]
protobuf = { version = "2.8.1", features = ["with-bytes"] }
serde = "1.0.101"
serde_derive = "1.0.101"
toml = "0.5.3"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
