[package]
name = "mjolnird"
version = "0.1.3"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]

[dependencies]
mjolnir-api = { path = "../mjolnir-api" }
mjolnir = { path = ".."}
base64 = "~0.6.0"
clap = "2.26"
futures = "0.1.16"
hostname = "^0.1"
hyper = "0.11.6"
log = "0.3"
tokio-core = "0.1"
reqwest = "0.7"
protobuf = "1.4"
serde = "1.0"
serde_derive = "1.0" 
simple_logger = "*"
toml = "0.4"
uuid = { version = "0.5", features = ["serde", "v4"] }
xdg = "^2.1"
yaml-rust = "0.3"
zmq = "~0.8"