[package]
name = "mjolnird"
version = "0.2.0"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]
edition = '2018'
license = "MIT/Apache-2.0"

[dependencies]
mjolnir-api = { path = "../mjolnir-api" }
mjolnir = { path = ".."}
base64 = "0.10.1"
clap = "2.33.0"
futures = "0.1.29"
hostname = "0.1.5"
hyper = "~0.11"
log = "0.4.8"
tokio-core = "0.1.17"
reqwest = "0.9.22"
protobuf = "2.8.1"
serde = "1.0.101"
serde_derive = "1.0.101"
simple_logger = "1.3.0"
toml = "0.5.3"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
xdg = "2.2.0"
yaml-rust = "0.4.3"

[dependencies.zmq]
version= "0.9.2"
features = ["vendored"]
